--- a/templates/topic.html
+++ b/templates/topic.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<div class="container" style= "padding-top: 5%; padding-bottom:5%">
+<div class="container" style= "padding-top: 8%; padding-bottom:5%">
    		 <div class="row">
       				<div class="col-md-8" style= " background-color:#d5dce1; margin-top:8%">
 				<h4> {{topics}} ({{sub}})</h4>
-                                <h6> Class: {{class_num}}</h6></div></div><br>
+                                <h6> Class: {{class_num}}</h6>
+                                Language-{{subject.language}}</div></div><br>
 				<div class="row">
 				<div class="col-md-8">
 				<blockquote>
