--- a/templates/topic.html
+++ b/templates/topic.html
@@ -12,6 +12,7 @@
 				<blockquote>
 				<p>{{subject.summary|safe|linebreaks}}</p>
 				<footer><strong>{{ subject.contributor}} ,{{subject.uploaded_on}}</strong></footer>
+                                <footer>{{subject.reviewer.all}}</footer>
                                 </blockquote>
                                 </div>
                                      <div class="col-md-1"></div>
