--- a/templates/reviewer_topic.html
+++ b/templates/reviewer_topic.html
@@ -77,7 +77,7 @@
 
 				</div>
 			        </div>
-    				
+    				</div></div>
 			<div class="col-md-1">
 			</div>
       			<div class="col-md-3" style= " background-color:#cad3d9; margin-top:8%"><br/>
@@ -100,10 +100,7 @@
 				
             </div>
        </div>
-    </div>
-</div>
-                            
-		
+   
 
 <script src="{% static 'js/paging.js' %}"></script>
 <script type="text/javascript">
